@@ -8,11 +8,14 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 # Version 2.0.
 # SPDX-License-Identifier: LGPL-3.0-only OR Artistic-2.0
 
-scenarios(linter => 1);
+scenarios(simulator => 1);
 
-lint(
-    fails => $Self->{vlt},
-    expect_filename => $Self->{golden_filename},
+compile(
+    make_flags => 'VM_PARALLEL_BUILDS=1',  # bug2775
+    );
+
+execute(
+    check_finished => 1,
     );
 
 ok(1);
